--- a/src/components/Association/Description/styles.scss
+++ b/src/components/Association/Description/styles.scss
@@ -7,3 +7,13 @@
     line-height: 1.4em;
   }
 }
+
+@media (min-width: 768px) {
+  .description {
+    padding: vars.$gutter * 3 0;
+    &__content {
+      font-size: 1.2em;
+      line-height: 1.5em;
+    }
+  }
+}
