--- a/src/components/AddCheeseProposal/styles.scss
+++ b/src/components/AddCheeseProposal/styles.scss
@@ -3,23 +3,67 @@
 .addProposal {
   display: flex;
   justify-content: center;
-  margin-top: vars.$gutter*2;
+  margin-top: vars.$gutter * 2;
   &__form {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 100%;
+    & input, select {
+      padding: vars.$gutter / 3;
+      border: 2px solid vars.$secondary-color;
+      border-radius: 2px;
+      background-color: vars.$main-color;
+      color: vars.$secondary-color;
+      &:focus {
+        background-color: vars.$secondary-color;
+        color: vars.$main-color;
+      }
+    }
   }
   &__select {
     margin-top: vars.$gutter/2;
   }
   &__label {
-    margin-top: vars.$gutter;
+    padding-bottom: vars.$gutter;
+    font-size: 1.1em;
+  }
+}
+
+.proposal {
+  &__button {
+    color: vars.$alt-color;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid vars.$alt-color;
+    padding: vars.$gutter/2;
     font-weight: bold;
-    display: flex;
-    flex-direction: column;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: vars.$gutter*2;
+    &:hover {
+      background-color: vars.$alt-color;
+      color: black;
+    }
   }
 }
 
 .ui.button {
   margin: 0;
+}
+
+.ui.modal, .ui.modal>.header, .ui.modal>.content, .ui.modal>.actions {
+  background: vars.$main-color;
+  color: vars.$secondary-color;
+}
+
+.ui.modal {
+  border-radius: 3px;
+}
+
+.ui.image {
+  border-bottom: 3px dashed vars.$alt-color;
+}
+
+.ui.modal>.actions {
+  text-align: center;
 }
