--- a/src/components/AddWineProposal/styles.scss
+++ b/src/components/AddWineProposal/styles.scss
@@ -3,20 +3,29 @@
 .addProposal {
   display: flex;
   justify-content: center;
-  margin-top: vars.$gutter*2;
+  margin-top: vars.$gutter * 2;
   &__form {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 100%;
+    & input, select {
+      padding: vars.$gutter / 3;
+      border: 2px solid vars.$secondary-color;
+      border-radius: 2px;
+      background-color: vars.$main-color;
+      color: vars.$secondary-color;
+      &:focus {
+        background-color: vars.$secondary-color;
+        color: vars.$main-color;
+      }
+    }
   }
   &__select {
     margin-top: vars.$gutter/2;
   }
   &__label {
-    margin-top: vars.$gutter;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
+    padding-bottom: vars.$gutter;
+    font-size: 1.1em;
   }
 }
 
@@ -38,10 +47,23 @@
   }
 }
 
-.description {
-  margin-top: 0;
-}
-
 .ui.button {
   margin: 0;
+}
+
+.ui.modal, .ui.modal>.header, .ui.modal>.content, .ui.modal>.actions {
+  background: vars.$main-color;
+  color: vars.$secondary-color;
+}
+
+.ui.modal {
+  border-radius: 3px;
+}
+
+.ui.image {
+  border-bottom: 3px dashed vars.$alt-color;
+}
+
+.ui.modal>.actions {
+  text-align: center;
 }
