--- a/src/components/Association/Description/styles.scss
+++ b/src/components/Association/Description/styles.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/vars';
 
-.description {
+.productDescription {
   padding: vars.$gutter * 2 0;
   &__content {
     text-align: center;
@@ -9,7 +9,7 @@
 }
 
 @media (min-width: 768px) {
-  .description {
+  .productDescription {
     padding: vars.$gutter * 3 0;
     &__content {
       font-size: 1.2em;
