--- a/src/components/BackOffice/SideBar/styles.scss
+++ b/src/components/BackOffice/SideBar/styles.scss
@@ -6,25 +6,44 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    margin-top: 2rem;
+    margin-top: vars.$gutter * 2;
     &__icon {
-      margin-right: 0.5rem;
+      margin-right: vars.$gutter / 2;
       align-self: center;
     }
     &__information {
       display: flex;
       flex-direction: column;
+      padding-left: vars.$gutter;
     }
   }
   &__text {
-    margin-bottom: 0.5rem;
+    margin-bottom: vars.$gutter;
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+  &__button {
+    padding: vars.$gutter / 2;
+    color: vars.$main-color;
+    border: 2px solid vars.$main-color;
+    border-radius: 2px;
+    background-color: vars.$alt-color;
+    font-weight: bold;
+    &:hover {
+      color: vars.$alt-color;
+      background-color: vars.$main-color;
+    }
   }
   &__nav {
     list-style-type: none;
-    margin-left: 0.5rem;
-    margin-top: 4rem;
+    margin: vars.$gutter * 2 0;
+    padding: vars.$gutter;
     &__link {
-      margin-bottom: 0.5rem;
+      margin-bottom: vars.$gutter;
+      font-size: 1.2em;
+      &:hover {
+        color: vars.$main-color;
+      }
     }
   }
 }
