edit modale ok, delete modale ok, cheese, wine, user ok

--- a/src/components/BackOffice/ModalPage/styles.scss
+++ b/src/components/BackOffice/ModalPage/styles.scss
@@ -27,7 +27,7 @@
 
 .editCheese {
   width: 450px;
-  margin-top: -2rem;
+  margin-left: vars.$gutter;
   &__title {
     margin-bottom: vars.$gutter;
     text-decoration: underline;
@@ -39,21 +39,26 @@
   &__form {
     display: flex;
     flex-direction: column;
-    background-color: black;
   }
   &__label {
     font-weight: bold;
     font-size: vars.$gutter;
     margin-top: vars.$gutter/2;
     color: vars.$alt-color;
-    
+    font-size: 1.2em;
   }
   &__input {
     display: block;
     width: 100%;
-    margin-top: vars.$gutter/2;
-    margin-bottom: vars.$gutter/2;
+    border: 2px solid vars.$secondary-color;
+    background-color: transparent;
+    color: vars.$secondary-color;
+    margin: vars.$gutter / 2 0;
     padding: vars.$gutter / 2;
+    &:focus {
+      background-color: vars.$secondary-color;
+      color: vars.$main-color;
+    }
     &__description {
       height: 150px;
       margin-top: vars.$gutter/2;
@@ -71,15 +76,15 @@
     color: vars.$alt-color;
     background-color: rgba(0, 0, 0, 0);
     border: 2px solid vars.$alt-color;
-    padding: vars.$gutter/2;
+    padding: vars.$gutter / 2;
     font-weight: bold;
     width: 100px;
-    border-radius: 20%;
+    border-radius: 2px;
     margin: vars.$gutter auto vars.$gutter auto;
   
     &:hover {
       background-color: vars.$alt-color;
-      color: black;
+      color: vars.$main-color;
     }
   }
 }
