--- a/src/components/BackOffice/Users/styles.scss
+++ b/src/components/BackOffice/Users/styles.scss
@@ -8,13 +8,13 @@
   }
   &__button {
     color: vars.$alt-color;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: vars.$main-color;
     border: 2px solid vars.$alt-color;
     padding: vars.$gutter/2;
     font-weight: bold;
     &:hover {
       background-color: vars.$alt-color;
-      color: black;
+      color: vars.$main-color;
     }
   }
   &__table {
@@ -24,13 +24,13 @@
     width: 100%;
     &__button {
       color: vars.$alt-color;
-      background-color: rgba(0, 0, 0, 0);
+      background-color: vars.$main-color;
       border: 2px solid vars.$alt-color;
       padding: vars.$gutter/2;
       font-weight: bold;
       &:hover {
         background-color: vars.$alt-color;
-        color: black;
+        color: vars.$main-color;
       }
     }
   }
