--- a/src/components/List/Products/styles.scss
+++ b/src/components/List/Products/styles.scss
@@ -18,6 +18,7 @@
   position: relative;
   background-color: vars.$main-color;
   margin: vars.$gutter / 2;
+  text-align: center;
     &:hover {
       opacity: 1;
     }
@@ -52,5 +53,17 @@
 @media (min-width: 1024px) {
   .product {
     width: calc(100% / 3);
+  }
+}
+
+@media (min-width: 1440px) {
+  .card {
+    &__title {
+      left: 5em;
+    }
+  }
+
+  .products {
+    width: 80%;
   }
 }
